# beautiful-data

./: README.md
data/: dir_tree_data_seaborn.json  dir_tree_data_transformers.json  language_tree_data.json
pybeautifuldata/: pyproject.toml
pybeautifuldata/src/beautifuldata/: __init__.py  base.py
