[project]
name = "beautifuldata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Spectalizer", email = "spectalizer@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
beautifuldata = "beautifuldata:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
